--- a/FicaFrio/Base.lproj/LaunchScreen.storyboard
+++ b/FicaFrio/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,16 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch1_07.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="jvF-Gp-lru"/>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="jvF-Gp-lru" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="JlM-2I-oGK"/>
+                            <constraint firstItem="jvF-Gp-lru" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="QTa-uI-t0a"/>
+                            <constraint firstItem="jvF-Gp-lru" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="R7K-yU-7QA"/>
+                            <constraint firstItem="jvF-Gp-lru" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="iFo-dT-Lzj"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,4 +34,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Launch1_07.jpg" width="750" height="1334"/>
+    </resources>
 </document>
