Alterações no design

--- a/FicaFrio/Base.lproj/LaunchScreen.storyboard
+++ b/FicaFrio/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch1_07.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="jvF-Gp-lru"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch_novo.png" translatesAutoresizingMaskIntoConstraints="NO" id="jvF-Gp-lru"/>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -35,6 +35,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Launch1_07.jpg" width="750" height="1334"/>
+        <image name="Launch_novo.png" width="750" height="1334"/>
     </resources>
 </document>
