--- a/FicaFrioWatch/Base.lproj/Interface.storyboard
+++ b/FicaFrioWatch/Base.lproj/Interface.storyboard
@@ -6,6 +6,9 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11077"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="SF-Compact-Display-Light.otf">
+            <string>SFCompactDisplay-Light</string>
+        </array>
         <array key="SF-Compact-Display-Regular.otf">
             <string>SFCompactDisplay-Regular</string>
         </array>
@@ -27,22 +30,72 @@
             </objects>
             <point key="canvasLocation" x="220" y="351"/>
         </scene>
+        <!--showStep-->
+        <scene sceneID="e8R-hb-6Cl">
+            <objects>
+                <controller identifier="showStep" id="Qou-Tz-PgB" customClass="InfoStepInterfaceController">
+                    <items>
+                        <group width="1" height="145" alignment="left" id="Jr2-Ff-fOV">
+                            <items>
+                                <label width="136" height="155" alignment="left" text="Label" textAlignment="center" numberOfLines="5" id="8fw-1T-5t3">
+                                    <fontDescription key="font" name="SFCompactDisplay-Light" family="SF Compact Display" pointSize="17"/>
+                                </label>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="textStep" destination="8fw-1T-5t3" id="cAd-rx-O9R"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="478" y="25"/>
+        </scene>
+        <!--endView-->
+        <scene sceneID="Kcm-4T-jFz">
+            <objects>
+                <controller identifier="endView" id="51H-XH-yaB" customClass="EndViewController">
+                    <items>
+                        <group width="1" height="80" alignment="center" id="QYA-MZ-b3z">
+                            <items>
+                                <imageView width="80" height="80" alignment="center" image="bola1" animationDuration="1" id="LdB-TI-oT4"/>
+                            </items>
+                        </group>
+                        <group width="134" height="36" alignment="left" id="zZp-pY-Lon">
+                            <items>
+                                <label width="131" height="27" alignment="center" verticalAlignment="center" text="Label" textAlignment="center" numberOfLines="2" id="ffO-J6-a9k">
+                                    <fontDescription key="font" name="SFCompactDisplay-Light" family="SF Compact Display" pointSize="17"/>
+                                </label>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="imageStep" destination="LdB-TI-oT4" id="sDv-j9-4mH"/>
+                        <outlet property="tagText" destination="ffO-J6-a9k" id="y8P-bO-t1G"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="754" y="25"/>
+        </scene>
         <!--Current Watch View Controller-->
         <scene sceneID="B1z-6b-cec">
             <objects>
                 <controller id="jJt-6K-aPf" customClass="CurrentWatchViewController">
                     <items>
-                        <group width="136" height="60" alignment="center" id="van-Ku-SPZ">
+                        <group width="1" height="91" alignment="center" id="Ipx-ef-vGY">
                             <items>
-                                <label width="136" height="40" alignment="left" verticalAlignment="center" text="The TestFlight app allows testers to install and beta test apps on iOS, tvOS and watchOS devices." textAlignment="center" numberOfLines="6" id="kRs-A2-nZu">
-                                    <fontDescription key="font" name="SFCompactDisplay-Regular" family="SF Compact Display" pointSize="8"/>
-                                </label>
+                                <imageView width="80" height="80" alignment="center" verticalAlignment="center" image="botao_respirar" id="waG-N8-Ocj"/>
+                                <button width="1" height="100" alignment="right" verticalAlignment="center" hidden="YES" title="Button" id="AV9-Ck-Crr">
+                                    <connections>
+                                        <action selector="showStep" destination="jJt-6K-aPf" id="zuL-dc-RhD"/>
+                                    </connections>
+                                </button>
                             </items>
                         </group>
-                        <group width="1" alignment="center" id="Ipx-ef-vGY">
+                        <group width="84" height="25" alignment="center" id="van-Ku-SPZ">
                             <items>
-                                <imageView width="41" height="40" alignment="center" verticalAlignment="center" image="botao_respirar" id="waG-N8-Ocj"/>
-                                <label alignment="center" hidden="YES" text="1" id="YJM-gJ-WxV"/>
+                                <label width="136" height="40" alignment="left" verticalAlignment="center" text="No goals" textAlignment="center" id="kRs-A2-nZu">
+                                    <fontDescription key="font" name="SFCompactDisplay-Regular" family="SF Compact Display" pointSize="17"/>
+                                </label>
                             </items>
                         </group>
                         <group width="1" height="40" alignment="center" id="MLb-E1-6NU">
@@ -68,13 +121,13 @@
                     <connections>
                         <outlet property="imageSet" destination="ebh-TL-cyV" id="oa3-pI-rtt"/>
                         <outlet property="relaxButton" destination="WLO-cB-yxg" id="r7s-l7-HGL"/>
+                        <outlet property="stepButton" destination="AV9-Ck-Crr" id="7eR-Vo-bVo"/>
                         <outlet property="stepImage" destination="waG-N8-Ocj" id="XsK-ba-tsZ"/>
-                        <outlet property="stepLabel" destination="YJM-gJ-WxV" id="1H4-RV-SlW"/>
                         <outlet property="stepText" destination="kRs-A2-nZu" id="r3N-qQ-E7Q"/>
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="478" y="346"/>
+            <point key="canvasLocation" x="478" y="352.5"/>
         </scene>
         <!--Relax Interface Controller-->
         <scene sceneID="hr0-xX-5tt">
@@ -88,7 +141,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="753" y="346"/>
+            <point key="canvasLocation" x="754" y="357"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -107,14 +160,14 @@
                     </connections>
                 </notificationController>
             </objects>
-            <point key="canvasLocation" x="220" y="643"/>
+            <point key="canvasLocation" x="230" y="668"/>
         </scene>
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
                 <controller id="4sK-HA-Art" customClass="NotificationController"/>
             </objects>
-            <point key="canvasLocation" x="468" y="643"/>
+            <point key="canvasLocation" x="478" y="668"/>
         </scene>
     </scenes>
 </document>
